objects/PC_eBenefits_Service_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>PC_Class_Name__c</fullName>
        <description>Name of the class that provides service response</description>
        <inlineHelpText>Name of the class that provides service response</inlineHelpText>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Named_Credential_Name__c</fullName>
        <description>Named credential that needs to be used. This must be the API name along with namespace, if any.</description>
        <inlineHelpText>Named credential that needs to be used. This must be the API name along with namespace, if any.</inlineHelpText>
        <label>Named Credential Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Service_Type__c</fullName>
        <label>Service Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>eBenefits Service Configuration</label>
    <pluralLabel>eBenefits Service Configurations</pluralLabel>
</CustomObject>